Change gnome-shell changelog distribution to "bullseye".

--- a/debs/gnome-shell/debian/changelog
+++ b/debs/gnome-shell/debian/changelog
@@ -1,4 +1,4 @@
-gnome-shell (3.38.4-1) unstable; urgency=medium
+gnome-shell (3.38.4-1) bullseye; urgency=medium
 
   * Team upload
   * New upstream release
