Add hostname to puavo-desktop-applet.

--- a/parts/desktop-applet/po/fi/puavo-desktop-applet.po
+++ b/parts/desktop-applet/po/fi/puavo-desktop-applet.po
@@ -158,3 +158,6 @@ msgstr "Onnistui"
 
 msgid "Display configuration sent successfully."
 msgstr "Näyttöasetukset lähetetty onnistuneesti."
+
+msgid "Hostname"
+msgstr "Laitenimi"
