Update changelog release names "buster" --> "bullseye".

--- a/debs/gnome-control-center/debian/changelog
+++ b/debs/gnome-control-center/debian/changelog
@@ -1,4 +1,4 @@
-gnome-control-center (1:3.30.3-2~deb10u1+puavo1) buster; urgency=medium
+gnome-control-center (1:3.30.3-2~deb10u1+puavo1) bullseye; urgency=medium
 
   * Add "appearance" plugin to gnome-control-center.
 
