--- a/debs/grub2/debian/changelog
+++ b/debs/grub2/debian/changelog
@@ -1,4 +1,4 @@
-grub2 (2.02+dfsg1-20+deb10u2+puavo1) buster; urgency=medium
+grub2 (2.02+dfsg1-20+deb10u2+puavo1) bullseye; urgency=medium
 
   * Build our own grub2 so we have grub-updates better in our control.
 
