--- a/debs/libmypaint/debian/changelog
+++ b/debs/libmypaint/debian/changelog
@@ -1,4 +1,4 @@
-libmypaint (1.3.0-2.1+puavo1) buster; urgency=medium
+libmypaint (1.3.0-2.1+puavo1) bullseye; urgency=medium
 
   * Build libmypaint for Buster.
 
