--- a/debs/libpam-ccreds/debian/changelog
+++ b/debs/libpam-ccreds/debian/changelog
@@ -1,4 +1,4 @@
-libpam-ccreds (10-7+puavo1) buster; urgency=medium
+libpam-ccreds (10-7+puavo1) bullseye; urgency=medium
 
   * Suppress success message.
 
