--- a/debs/mutter/debian/changelog
+++ b/debs/mutter/debian/changelog
@@ -1,4 +1,4 @@
-mutter (3.30.2-9~deb10u1+puavo1) buster; urgency=medium
+mutter (3.30.2-9~deb10u1+puavo1) bullseye; urgency=medium
 
   * Add our own patch puavo_allow_configurations.patch.
 
