--- a/debs/mypaint/debian/changelog
+++ b/debs/mypaint/debian/changelog
@@ -1,4 +1,4 @@
-mypaint (1.2.0-4.1+puavo1) buster; urgency=medium
+mypaint (1.2.0-4.1+puavo1) bullseye; urgency=medium
 
   * Build mypaint for Buster.
 
