--- a/debs/sblim-sfcc/debian/changelog
+++ b/debs/sblim-sfcc/debian/changelog
@@ -1,4 +1,4 @@
-sblim-sfcc (2.2.8-0ubuntu2+puavo1) buster; urgency=medium
+sblim-sfcc (2.2.8-0ubuntu2+puavo1) bullseye; urgency=medium
 
   * Build sblim-sfcc for Buster.
 
