--- a/debs/vtun/debian/changelog
+++ b/debs/vtun/debian/changelog
@@ -1,4 +1,4 @@
-vtun (3.0.2-4+puavo2) buster; urgency=medium
+vtun (3.0.2-4+puavo2) bullseye; urgency=medium
 
   * Added patches from the vtun-package in Debian Buster
     so that this can be compiled on Buster.
