--- a/debs/wsmancli/debian/changelog
+++ b/debs/wsmancli/debian/changelog
@@ -1,4 +1,4 @@
-wsmancli (2.6.0-0ubuntu1+puavo1) buster; urgency=medium
+wsmancli (2.6.0-0ubuntu1+puavo1) bullseye; urgency=medium
 
   * Build wsmancli for Buster.
 
