--- a/parts/aptirepo/debian/changelog
+++ b/parts/aptirepo/debian/changelog
@@ -1,4 +1,4 @@
-aptirepo (0.7.2) buster; urgency=medium
+aptirepo (0.7.2) bullseye; urgency=medium
 
   * New release
   * aptirepo: prune orphaned .debs during when pruning the pool
