--- a/cloud/puavo-ds/debian/changelog
+++ b/cloud/puavo-ds/debian/changelog
@@ -1,3 +1,9 @@
+puavo-ds (0.3.3) bullseye; urgency=medium
+
+  * New "upstream" version.
+
+ -- Opinsys Oy <dev@opinsys.fi>  Tue, 29 Jun 2021 09:15:28 +0300
+
 puavo-ds (0.3.2) buster; urgency=medium
 
   * New "upstream" version, with some changes by Veli-Matti Lintu.
