Add "+puavo1" to gnome-shell version.

--- a/debs/gnome-shell/debian/changelog
+++ b/debs/gnome-shell/debian/changelog
@@ -1,3 +1,9 @@
+gnome-shell (3.38.4-1+puavo1) bullseye; urgency=medium
+
+  * Build gnome-shell for Bullseye.
+
+ -- Puavo Org <dev@opinsys.fi>  Tue, 10 Aug 2021 07:45:07 +0300
+
 gnome-shell (3.38.4-1) bullseye; urgency=medium
 
   * Team upload
